[git] Set push.autoSetupRemote=true

--- a/.gitconfig
+++ b/.gitconfig
@@ -16,4 +16,4 @@ tags = tag --list
 lg22 = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
 [push]
-autoSetupRemote = tru
+autoSetupRemote = true
